# cmake_template

./: CMakeLists.txt
example/: main.cpp
functions/: CMakeLists.txt  functions.cpp  functions.h
